FEATURE: Login e cadastro de Usuario

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -6,6 +6,10 @@
     }
   },
 
+  "BearerSettings": {
+    "Secret": "segredoparaprotegerotokendelogin"
+  },
+
   "ConnectionStrings": {
     "connection": "Server=localhost\\SQLEXPRESS;Database=Unisport;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
